--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 			  android:layout_width="fill_parent"
-			  android:layout_height="fill_parent"
-			  android:orientation="vertical">
+			  android:layout_height="fill_parent" >
 	<TextView
+		 xmlns:android="http://schemas.android.com/apk/res/android"
 		 android:id="@+id/decimal_text"
 		 android:layout_height="wrap_content"
-		 android:layout_width="fill_parent"
-		 android:paddingTop="150px"
+		 android:layout_width="wrap_content"
 		 android:textSize="48sp"
-		 android:layout_centerInParent="true"
+		 android:layout_centerInParent="false"
 		 android:text="@string/decimal" />
 	<EditText
     	 android:id="@+id/input_number"
+    	 android:layout_below="@id/decimal_text"
     	 android:layout_width="fill_parent"
 	     android:layout_height="wrap_content"
 	     android:paddingTop="150px"
 	     android:inputType="number" />
 	<TextView
 		 android:id="@+id/binary_text"
+		 android:layout_below="@id/input_number"
 		 android:layout_height="wrap_content"
 		 android:layout_width="fill_parent"
 		 android:paddingTop="150px"
@@ -27,6 +28,7 @@
 		 android:text="@string/binary" />
 	<TextView
 		 android:id="@+id/output_number"
+		 android:layout_below="@id/binary_text"
 		 android:layout_width="fill_parent"
 		 android:layout_height="wrap_content"
 		 android:paddingTop="150px"
@@ -35,10 +37,11 @@
 		 android:visibility="invisible" />
 	<Button
 		 android:id="@+id/convert_button"
+		 android:layout_below="@id/output_number"
 		 android:layout_width="wrap_content"
 		 android:layout_height="wrap_content"
 		 android:paddingTop="150px"
 		 android:text="@string/convert"
 		 android:onClick="convert"
 		 android:layout_centerInParent="true" />
-</LinearLayout>
+</RelativeLayout>
