--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,47 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 			  android:layout_width="fill_parent"
-			  android:layout_height="fill_parent" >
+			  android:layout_height="fill_parent"
+			  android:orientation="vertical" >
 	<TextView
 		 xmlns:android="http://schemas.android.com/apk/res/android"
 		 android:id="@+id/decimal_text"
 		 android:layout_height="wrap_content"
-		 android:layout_width="wrap_content"
+		 android:layout_width="fill_parent"
 		 android:textSize="48sp"
-		 android:layout_centerInParent="false"
+		 android:gravity="center"
 		 android:text="@string/decimal" />
 	<EditText
     	 android:id="@+id/input_number"
-    	 android:layout_below="@id/decimal_text"
     	 android:layout_width="fill_parent"
 	     android:layout_height="wrap_content"
 	     android:paddingTop="150px"
 	     android:inputType="number" />
 	<TextView
 		 android:id="@+id/binary_text"
-		 android:layout_below="@id/input_number"
 		 android:layout_height="wrap_content"
 		 android:layout_width="fill_parent"
 		 android:paddingTop="150px"
 		 android:textSize="48sp"
-		 android:layout_centerInParent="true"
+		 android:gravity="center"
 		 android:text="@string/binary" />
 	<TextView
 		 android:id="@+id/output_number"
-		 android:layout_below="@id/binary_text"
 		 android:layout_width="fill_parent"
 		 android:layout_height="wrap_content"
 		 android:paddingTop="150px"
 		 android:textSize="48sp"
-		 android:layout_centerInParent="true"
-		 android:visibility="invisible" />
+		 android:gravity="center"
+		 android:visibility="gone" />
 	<Button
 		 android:id="@+id/convert_button"
-		 android:layout_below="@id/output_number"
 		 android:layout_width="wrap_content"
 		 android:layout_height="wrap_content"
-		 android:paddingTop="150px"
+		 android:layout_marginTop="150px"
 		 android:text="@string/convert"
-		 android:onClick="convert"
-		 android:layout_centerInParent="true" />
-</RelativeLayout>
+		 android:layout_gravity="center"
+		 android:onClick="convert" />
+</LinearLayout>
