--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -39,6 +39,7 @@
 		 android:layout_width="wrap_content"
 		 android:layout_height="wrap_content"
 		 android:layout_marginTop="150px"
+		 android:textSize="36sp"
 		 android:text="@string/convert"
 		 android:layout_gravity="center"
 		 android:onClick="convert" />
