--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,8 +4,13 @@
 			  android:layout_width="fill_parent"
 			  android:layout_height="fill_parent"
 			  android:orientation="vertical" >
+	<Spinner
+		 android:id="@+id/number_systems_spinner_1"
+		 android:layout_height="wrap_content"
+		 android:layout_width="wrap_content"
+		 android:textSize="36sp"
+		 android:layout_gravity="center" />
 	<TextView
-		 xmlns:android="http://schemas.android.com/apk/res/android"
 		 android:id="@+id/decimal_text"
 		 android:layout_height="wrap_content"
 		 android:layout_width="fill_parent"
